# phiverb

./: .gitignore  AGENTS.md  ANALISI_REPOSITORY.md  CMakeLists.txt  Makefile  REPOSITORY_ANALYSIS_SUMMARY.md  build.sh  dev_cycle.sh  readme.md  setup_env.sh  todo.md
.codex/: POLICY_ASK.md
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
.github/agents/: README.md  phiverb-metal-assistant.agent.md
.github/workflows/: README.md  agent-iteration-router.yml  agent-runner.yml  archeology-xref.yml  ask-gate.yml  ci-build-test.yml  ci.yml  control-room.yml  doc-consistency.yml  doc-gate.yml  metal-ci.yml  pr-linkback.yml  progress-advisor.yml
analysis/: comment_summary.md  todo_comment_xref.md
assets/materials/: ptb_shoebox.json
assets/test_geometry/: pyramid_twisted_minor.mtl
config/: apply_patch_if_needed.sh  dependencies.cmake  dependencies.cmake.backup  fix_assimp.patch  fix_cereal_tuple.patch
docs/: 00_AGENT_README.md  AGENT_PROMPTS.md  APPLE_SILICON.md  CONSOLIDATION_SUMMARY.md  CONTROL_ROOM.md  DEPENDENCY_MIGRATION.md  IMPLEMENTATION_SUMMARY.md  INFRASTRUCTURE.md  METAL_FIX_SUMMARY.md  MIGRATION_SUMMARY.md  OPENCL_ERROR_HANDLING_SUMMARY.md  README.md  USAGE_EXAMPLES.md  action_plan.md  agent_runbook.md  archeology.md  audio_spatial_framework_plan.md  development_log.md  mesh_tools.md  metal_port_plan.md  opencl_error_handling.md  refs.bib
docs/ask/: ASK-20251108-rt-specular.md
docs/doxygen/html/: full__run_8h_source.html  geometric_8h_source.html  iterative__builder_8h_source.html  scene_8h_source.html  scene__data__loader_8h_source.html  threaded__queue_8h_source.html
docs_source/: boundary.md
docs_source/doxygen/html/: box_8h_source.html  raytracer_2include_2raytracer_2raytracer_8h_source.html  waveguide__base_8h_source.html
geometrie_wayverb/: README.md  shoebox_long.dif.json  shoebox_long.sdf.json  shoebox_long.sdf.npz  shoebox_small.mtl  shoebox_small.sdf.json  shoebox_small.sdf.npz
logs/control_room/: README.md  alessioivoycazzaniga.md
metal/: diagnostics.metal
scripts/: benchmark.sh  check_scope.py  dump_boundary_node.py  monitor_app_log.sh  patch_assimp.cmake  patch_assimp_sources.py  patch_fftw_docs.cmake  run_regression.sh  sanitize_mesh.py  test_metal.sh  validate_audio.py  waveguide_precompute.py
scripts/agents/: checkpoint_or_pr.sh  log_note.sh  spawn_worktree.sh  token_guard.sh
scripts/ask/: gate.py  new
scripts/chat/: listen  say
scripts/qa/: edc.py  rt_bounds.py  run_validation_suite.py
src/combined/: CMakeLists.txt
src/combined/include/combined/: engine.h  full_run.h  postprocess.h  waveguide_base.h
src/combined/include/combined/model/: member.h  scene.h  waveguide.h
src/combined/src/: engine.cpp  threaded_engine.cpp  waveguide_base.cpp  waveguide_metal.cpp
src/combined/src/model/: waveguide.cpp
src/core/: CMakeLists.txt
src/core/data/: hrtf_entries_stub.h.in
src/core/include/core/: build_id.h  dsp_vector_ops.h  geometry_analysis.h  geometry_validator.h  program_wrapper.h  scene_data_loader.h  simd_apple.h
src/core/include/core/cl/: cl_check.h  cl_error.h
src/core/include/core/geo/: box.h  geometric.h
src/core/src/: geometry_analysis.cpp  program_wrapper.cpp
src/core/src/cl/: common.cpp  geometry.cpp  voxel.cpp
src/core/tests/: CMakeLists.txt  dc_blocker_tests.cpp
src/hrtf/cmd/: main.cpp
src/metal/: CMakeLists.txt
src/metal/include/metal/: metal_context.h  waveguide_pipeline.h  waveguide_simulation.h
src/metal/scripts/: embed_metal_kernels.py
src/metal/src/: embedded_waveguide_kernels.h  metal_context.mm  waveguide_kernels.metal  waveguide_pipeline.mm  waveguide_simulation.mm
src/raytracer/: CMakeLists.txt
src/raytracer/include/raytracer/: canonical.h  hit_rate.h  iterative_builder.h  raytracer.h  reflector.h  simulation_parameters.h
src/raytracer/include/raytracer/cl/: reflection.h  structs.h
src/raytracer/src/: canonical.cpp  program.cpp  reflector.cpp
src/raytracer/src/cl/: brdf.cpp
src/raytracer/src/image_source/: postprocess_branches.cpp
src/raytracer/src/reflection_processor/: image_source.cpp  stochastic_histogram.cpp
src/raytracer/src/stochastic/: postprocessing.cpp  program.cpp
src/raytracer/tests/: determinism_tests.cpp  mis_weights.cpp  reflector_tests.cpp  reverb_tests.cpp  stochastic_tests.cpp
src/utilities/include/utilities/: apply.h  crash_reporter.h  optional.h  threaded_queue.h
src/utilities/src/: crash_reporter.cpp
src/waveguide/: CMakeLists.txt
src/waveguide/include/waveguide/: attenuator.h  backend_selector.h  boundary_coefficient_finder.h  boundary_guard.h  boundary_layout.h  canonical.h  fitted_boundary.h  layout_info.h  mesh.h  numerical_safety.h  precomputed_inputs.h  program.h  setup.h  waveguide.h
src/waveguide/include/waveguide/cl/: filter_structs.h  (+1 more)
src/waveguide/src/: backend_selector.cpp  boundary_coefficient_finder.cpp  boundary_layout.cpp  filters.cpp  layout_info.cpp  mesh.cpp  precomputed_inputs.cpp  program.cpp  setup.cpp
src/waveguide/src/cl/: filter_structs.cpp  filters.cpp
src/waveguide/tests/: boundary_index_validation.cpp  build_program.cpp
tests/: CMakeLists.txt  test_cl_error_handling.cpp  test_numerical_safety.cpp
tests/scenes/: aula_medium.json  shoebox_small.json
tools/: build_metal.sh  comment_inventory.py  comment_inventory_diff.py  docs_refresh.py  run_regression_suite.sh  run_wayverb.sh  sofa_to_wayverb_wavs.py  todo_comment_xref.py  wayverb_mesh.py  write_build_id_header.sh
tools/swift/: ScaleOBJ.swift
wayverb/Builds/MacOSX/wayverb.xcodeproj/: project.pbxproj
wayverb/JuceLibraryCode/: AppConfig.h
wayverb/Source/: Application.cpp  build_id_override.h  generic_slider_property.h  main_model.cpp  main_model.h
wayverb/Source/3d_objects/: multi_material_object.h  reflections_object.cpp
wayverb/Source/UtilityComponents/: AngularLookAndFeel.cpp  threaded_queue.h
wayverb/Source/left_bar/: master.cpp
wayverb/Source/left_bar/geometry/: master.cpp  master.h
wayverb/Source/metal/: MetalSample.h  MetalSample.mm
wayverb/Source/output/: master.h
wayverb/Source/scene/: view.h
(+9 files in other folders)
